--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="/style.css" />
   <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
   <script type="text/javascript" src="paper-full.js"></script>
-  <script type="text/javascript" src="paperjs.js"></script>
+  <script type="text/javascript" src="shape.js"></script>
   <title>ToneJS</title>
 </head>
 
