--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,10 @@
   <meta charset='utf-8'>
   <meta name='viewport' content='width=device-width initial-scale=1.0'>
   <link rel="stylesheet" href="/style.css" />
-  <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
   <script type="text/javascript" src="paper-full.js"></script>
+  <script type"text/javascript" src="Tone.js"></script>
   <script type="text/javascript" src="shape.js"></script>
+  <script type"text/javascript" src="tone-scraps.js"></script>
   <title>ToneJS</title>
 </head>
 
