--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
   <meta charset='utf-8'>
   <meta name='viewport' content='width=device-width initial-scale=1.0'>
   <link rel="stylesheet" href="/style.css" />
+  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.1/semantic.min.css"></link>
   <script type="text/javascript" src="paper-full.js"></script>
   <script type"text/javascript" src="Tone.js"></script>
   <script type"text/javascript" src="tone-scraps.js"></script>
