--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="/style.css" />
   <link href="https://fonts.googleapis.com/css?family=Jua" rel="stylesheet">
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.1/semantic.min.css"></link>
+  <script src="https://aframe.io/releases/0.8.0/aframe.min.js"></script>
   <script type="text/javascript" src="paper-full.js"></script>
   <script type"text/javascript" src="Tone.js"></script>
   <script type"text/javascript" src="tone-scraps.js"></script>
